tests/errors/type_check_pattern_match.err
Type Error: Trying to pattern match value of type `Foo` with constructor `Y(Int) -> Bar`
5:   let Y(y) = x {
          ^
